# go-chat

./: .gitignore  Makefile  README.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
chat-ai/: .dockerignore  Dockerfile  Makefile  pyproject.toml  requirements.txt
chat-ai/chat_ai/: main.py  responder.py
chat-ai/chat_ai/proto/: chat_pb2.py  chat_pb2_grpc.py
chat-ai/tests/: test_responder.py
chat-client/: Dockerfile  Makefile  package-lock.json  package.json
chat-client/public/dev/: index.html
chat-client/src/: App.css  App.jsx
chat-gateway/: Dockerfile  Makefile  package-lock.json  package.json
chat-gateway/src/: grpcClient.js  handlers.js  server.js
chat-gateway/tests/: grpcClient.test.js  handlers.test.js
chat-service/: .dockerignore  Dockerfile  Makefile  go.mod
chat-service/cmd/server/: main.go
chat-service/internal/logic/: chat.go  chat_test.go
chat-service/proto/: chat.pb.go  chat_grpc.pb.go
proto/: chat.proto
scripts/: package-lock.json  package.json
scripts/src/: run-all.js
